<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vPIM</string>
    <string name="action_input">输入</string>
    <string name="action_scan">扫一扫</string>

    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="scan_qrcode">扫描二维码</string>
    <string name="cancel">取消</string>

    <!-- about -->
    <string name="about_my_name">周国栋</string>
    <string name="about_my_info">数媒1104班  周国栋</string>
    <string name="about_tutor_info">指导老师： 狄岚</string>
    <string name="common_student">学生</string>
    <string name="common_jiangnandaxue">江南大学</string>
    <string name="common_university_add">江苏省无锡市滨湖区蠡湖大道1800号</string>
    <string name="common_digital_media">江南大学数字媒体学院</string>
    <string name="common_tutor_name">狄岚</string>
    <string name="common_tutor_state">副教授</string>
    <string name="btn_choose_table">选择表格</string>
    <string name="america">美国入境表</string>
    <string name="register">XX会员注册表</string>
    <string name="chinese_aboard">因私出国（境）申请表</string>
    <string name="no_info_tip">您尚未填写个人信息！去填写？</string>
    <string name="contact_search">搜索</string>
    <string name="toast_search_resulet1">共找到</string>
    <string name="toast_search_result2">张名片！</string>
    <string name="toast_search_no_result">没有找到您想要的名片，添加一张吧！</string>
    <string name="tips_failed">添加失败</string>
    <string name="tips_content_no_data">请添写完整信息内容后再保存</string>
    <string name="tips_content_erro_name">未填写姓名或者填写内容不合法</string>
    <string name="tips_content_erro_job">未填写机构或者填写内容不合法</string>
    <string name="tips_content_erro_telephone">未填写号码或者填写内容不合法</string>
    <string name="tips_content_erro_email">未填写邮箱或者填写内容不合法</string>
    <string name="tips_content_erro_organization">未填写岗位或者填写内容不合法</string>
    <string name="tips_content_erro_address">未填写地址或者填写内容不合法</string>
    <string name="tips_content_erro_unknow">未知错误</string>
    <string name="tips_content_had_exit">数据已存在！（一个号码只能对应一张名片）</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="main_home_center">个人中心</string>
    <string name="main_card_collector">名片夹</string>
    <string name="main_about_us">关于我们</string>
    <string name="tips_exit">确定要退出吗？</string>

    <string name="keyword_name">姓名</string>
    <string name="keyword_sex">性别</string>
    <string name="keyword_nation">民族</string>
    <string name="keyword_nationality">国籍</string>
    <string name="keyword_birthday">生日</string>
    <string name="keyword_id_num">身份证号</string>
    <string name="keyword_telephone">电话号码</string>
    <string name="keywords_email">电子邮箱</string>
    <string name="keyword_family_address">家庭住址</string>
    <string name="keyword_current_address">当前地址</string>
    <string name="keyword_job">工作岗位</string>
    <string name="keyword_organization">所在单位</string>
    <string name="keyword_organ_address">单位地址</string>
    <string name="keyword_politcal_status">政治面貌</string>

    <string name="login_success">注册成功</string>
    <string name="send_choose">选择要发送的内容</string>
    <string name="send_select_all">全选</string>
    <string name="send_msg">发送消息</string>
    <string name="add_contact_info">填写信息</string>
    <string name="job">职位</string>
    <string name="ogan">机构</string>
    <string name="address">地址</string>
    <string name="card_style">名片样式：</string>
    <string name="btn_add">添加</string>
    <string name="sex">性别：</string>
    <string name="btn_calendar">日历</string>
    <string name="btn_save">保存</string>
    <string name="splash_text">毕业设计</string>
    <string name="home_center_sex">性别：</string>
    <string name="home_center_nation">民族：</string>
    <string name="home_center_nationality">国籍：</string>
    <string name="home_center_birthday">生日：</string>
    <string name="home_center_telephone">联系电话：</string>
    <string name="home_center_job">工作岗位：</string>
    <string name="home_center_organization">所在机构：</string>
    <string name="home_center_email">电子邮箱：</string>
    <string name="home_center_family_address">家庭地址：</string>
    <string name="home_center_current_address">所在地址：</string>
    <string name="gongzuo">工作</string>
    <string name="android_dev">安卓开发工程师</string>
    <string name="scan_to_add">扫一扫添加</string>
    <string name="person_info_see_more"><![CDATA[查看更多>>]]></string>


    <!-- -->

</resources>
