<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:genius="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
              android:background="@drawable/xml_add_contact_bg">

        <net.qiujuer.genius.widget.GeniusTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginTop="10dip"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="@string/add_contact_info"
                android:textSize="24sp"
                genius:g_textColor="main"
                genius:g_theme="@array/ClassicBlue" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <net.qiujuer.genius.widget.GeniusTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gname"
            android:hint="@string/keyword_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />
    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gjob"
            android:hint="@string/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />

    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gtelephone"
            android:hint="@string/keyword_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />
    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gemail"
            android:hint="@string/keywords_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />
    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gorganization"
            android:hint="@string/ogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />

    <net.qiujuer.genius.widget.GeniusEditText
            android:id="@+id/gaddress"
            android:hint="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/edit_text_size"
            genius:g_borderWidth="2dp"
            genius:g_fieldStyle="line"
            genius:g_theme="@array/Dark"
            />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/card_style"
                                android:textSize="@dimen/edit_text_size"
                                android:textColor="@color/bg_card1"/>

                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        >
                        <android.support.v4.view.ViewPager
                        android:id="@+id/card_viewpage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"/>
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:orientation="horizontal"
                                android:layout_marginBottom="8dp">
                                <View
                                        android:id="@+id/dot0"
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:layout_margin="2dp"
                                        android:clickable="true"
                                        android:background="@drawable/viewpage_dot"/>

                                <View
                                        android:id="@+id/dot1"
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:layout_margin="2dp"
                                        android:clickable="true"
                                        android:background="@drawable/viewpage_dot"/>

                                <View
                                        android:id="@+id/dot2"
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:layout_margin="2dp"
                                        android:clickable="true"
                                        android:background="@drawable/viewpage_dot"/>
                                <View
                                        android:id="@+id/dot3"
                                        android:layout_width="10dp"
                                        android:layout_height="10dp"
                                        android:layout_margin="2dp"
                                        android:clickable="true"
                                        android:background="@drawable/viewpage_dot"/>

                        </LinearLayout>

                </RelativeLayout>
                

        </LinearLayout>
        </LinearLayout>

        </ScrollView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="right">

                <net.qiujuer.genius.widget.GeniusTextView
                        android:id="@+id/gsave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:background="@drawable/xml_selector_btn_bg"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/btn_add"
                        android:textSize="@dimen/edit_text_size"
                        genius:g_textColor="main"
                        genius:g_theme="@array/ClassicBlue" />

                <net.qiujuer.genius.widget.GeniusTextView
                        android:id="@+id/gcancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/xml_selector_btn_bg"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/dialog_cancel"
                        android:textSize="@dimen/edit_text_size"
                        genius:g_textColor="main"
                        genius:g_theme="@array/ClassicBlue" />




        </LinearLayout>

</LinearLayout>